--- a/src/views/beneficiaries.ejs
+++ b/src/views/beneficiaries.ejs
@@ -33,6 +33,7 @@
                         <tr>
                             <th>Nombre</th>
                             <th>Apellido</th>
+                            <th>Tipo de Cédula</th>
                             <th>Cédula</th>
                             <th>Parentesco</th>
                             <th>Dirección</th>
@@ -51,6 +52,7 @@
                         <tr>
                             <th>Nombre</th>
                             <th>Apellido</th>
+                            <th>Tipo de Cédula</th>
                             <th>Cédula</th>
                             <th>Parentesco</th>
                             <th>Dirección</th>
@@ -138,6 +140,7 @@ $(document).ready(function(){
         columns: [
             {"data": "nombre_beneficiario"},
             {"data": "apellido_beneficiario"},
+            {"data": "tipo_cedula_beneficiario"},
             {"data": "cedula_beneficiario"},
             {"data": "parentesco_beneficiario"},
             {"data": "direccion_beneficiario"},
