--- a/src/views/executiveForm.ejs
+++ b/src/views/executiveForm.ejs
@@ -31,7 +31,7 @@
                                         <div class="col-sm-10 field">
                                             <div class="numeral-selector selector">
                                                 <div class="select-box-wrapper">
-                                                    <select id="select_box">
+                                                    <select name="tipo_cedula_ejecutivo" id="select_box">
                                                         <option value="V">V</option>
                                                         <option value="E">E</option>
                                                     </select>
