--- a/src/views/legalInsureds.ejs
+++ b/src/views/legalInsureds.ejs
@@ -31,6 +31,7 @@
                         >
                         <thead>
                         <tr>
+                            <th>Tipo Rif</th>
                             <th>Rif</th>
                             <th>Razón Social</th>
                             <th>Teléfono</th>
@@ -46,6 +47,7 @@
                         </tbody>
                         <tfoot>
                         <tr>
+                            <th>Tipo Rif</th>
                             <th>Rif</th>
                             <th>Razón Social</th>
                             <th>Teléfono</th>
@@ -130,6 +132,7 @@ $(document).ready(function(){
         processing: true,
         serverSide: false,
         columns: [
+            {"data": "tipo_rif_asegurado_per_jur"},
             {"data": "rif_asegurado_per_jur"},
             {"data": "razon_social_per_jur"},
             {"data": "telefono_asegurado_per_jur"},
