--- a/src/views/policiesBeneficiaries.ejs
+++ b/src/views/policiesBeneficiaries.ejs
@@ -33,6 +33,7 @@
                         <tr>
                             <th>Nombre</th>
                             <th>Apellido</th>
+                            <th>Tipo de Cédula</th>
                             <th>Cédula</th>
                             <th>Fecha de Nacimiento</th>
                             <th>Parentesco</th>
@@ -47,6 +48,7 @@
                         <tr>
                             <th>Nombre</th>
                             <th>Apellido</th>
+                            <th>Tipo de Cédula</th>
                             <th>Cédula</th>
                             <th>Fecha de Nacimiento</th>
                             <th>Parentesco</th>
@@ -130,6 +132,7 @@ $(document).ready(function(){
         columns: [
             {"data": "nombre_beneficiario"},
             {"data": "apellido_beneficiario"},
+            {"data": "tipo_cedula_beneficiario"},
             {"data": "cedula_beneficiario"},
             {"data": "fec_nac_beneficiario"},
             {"data": "parentesco_beneficiario"},
