--- a/src/views/editEmergency.ejs
+++ b/src/views/editEmergency.ejs
@@ -56,30 +56,54 @@
                                     <div class="hr-line-dashed"></div>
                                     <% if (naturalInsured === undefined) { %>
                                         <div class="form-group row"><label class="col-sm-3 col-form-label">Cédula/Rif</label>
-                                            <div class="col-sm-9">
-                                                <input 
+                                            <div class="col-sm-9 field">
+                                                <div class="numeral-selector selector">
+                                                    <div class="select-box-wrapper">
+                                                        <select name="tipo_id_rif_asegurado" id="select_box">
+                                                            <option value="<%= legalInsured.tipo_rif_asegurado_per_jur %>"><%= legalInsured.tipo_rif_asegurado_per_jur %></option>
+                                                            <option value="V">V</option>
+                                                            <option value="E">E</option>
+                                                            <option value="J">J</option>
+                                                            <option value="G">G</option>
+                                                            <option value="I">I</option>
+                                                            <option value="F">F</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                                <input
                                                     type="text"
                                                     name="id_rif_asegurado"
                                                     id="id_rif_asegurado"
                                                     onkeyup="pasarNombreAsegurado();"
                                                     value="<%= legalInsured.rif_asegurado_per_jur %>" 
-                                                    class="form-control cedula_rif"
-                                                    oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
+                                                    class="form-control input-numeral"
                                                     required
                                                 >
                                             </div>
                                         </div>
                                     <% } else if (legalInsured === undefined) { %>
                                         <div class="form-group row"><label class="col-sm-3 col-form-label">Cédula/Rif</label>
-                                            <div class="col-sm-9">
+                                            <div class="col-sm-9 field">
+                                                <div class="numeral-selector selector">
+                                                    <div class="select-box-wrapper">
+                                                        <select name="tipo_id_rif_asegurado" id="select_box">
+                                                            <option value="<%= naturalInsured.tipo_cedula_asegurado_per_nat %>"><%= naturalInsured.tipo_cedula_asegurado_per_nat %></option>
+                                                            <option value="V">V</option>
+                                                            <option value="E">E</option>
+                                                            <option value="J">J</option>
+                                                            <option value="G">G</option>
+                                                            <option value="I">I</option>
+                                                            <option value="F">F</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
                                                 <input 
                                                     type="text"
                                                     name="id_rif_asegurado"
                                                     id="id_rif_asegurado"
                                                     onkeyup="pasarNombreAsegurado();"
                                                     value="<%= naturalInsured.cedula_asegurado_per_nat %>" 
-                                                    class="form-control cedula_rif"
-                                                    oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
+                                                    class="form-control input-numeral"
                                                     required
                                                 >
                                             </div>
@@ -87,14 +111,23 @@
                                     <% } %>
                                     <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Cédula</label>
-                                        <div class="col-sm-9">
+                                        <div class="col-sm-9 field">
+                                            <div class="numeral-selector selector">
+                                                <div class="select-box-wrapper">
+                                                    <select name="tipo_cedula_beneficiario" id="select_box2">
+                                                        <option value="<%= beneficiary.tipo_cedula_beneficiario %>"><%= beneficiary.tipo_cedula_beneficiario %></option>
+                                                        <option value="V">V</option>
+                                                        <option value="E">E</option>
+                                                    </select>
+                                                </div>
+                                            </div>
                                             <input 
                                                 type="text"
                                                 name="cedula_beneficiario"
                                                 id="cedula_beneficiario"
                                                 onkeyup="pasarNombreAsegurado();"
                                                 value="<%= beneficiary.cedula_beneficiario %>"
-                                                class="form-control cedula"
+                                                class="form-control input-numeral-cedula"
                                             >
                                         </div>
                                     </div>
