--- a/src/views/editOwnAgent.ejs
+++ b/src/views/editOwnAgent.ejs
@@ -29,12 +29,21 @@
                                 <div class="form-control">
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Cédula</label>
                                         <div class="col-sm-10">
+                                            <div class="numeral-selector selector">
+                                                <div class="select-box-wrapper">
+                                                    <select name="tipo_cedula_agente_propio" id="select_box">
+                                                        <option value="<%= ownAgent.tipo_cedula_agente_propio %>"><%= ownAgent.tipo_cedula_agente_propio %></option>
+                                                        <option value="V">V</option>
+                                                        <option value="E">E</option>
+                                                    </select>
+                                                </div>
+                                            </div>
                                             <input 
                                                 type="text"
                                                 name="cedula_agente_propio"
                                                 id="cedula_agente_propio"
                                                 value="<%= ownAgent.cedula_agente_propio %>"
-                                                class="form-control cedula"
+                                                class="form-control input-numeral-cedula"
                                                 required
                                             >
                                         </div>
