--- a/src/views/editReceipt.ejs
+++ b/src/views/editReceipt.ejs
@@ -73,14 +73,27 @@
                                     <div class="hr-line-dashed"></div>
                                     <% if (naturalInsured === undefined) { %>
                                         <div class="form-group row"><label class="col-sm-3 col-form-label">Cédula/Rif</label>
-                                            <div class="col-sm-9">
+                                            <div class="col-sm-9 field">
+                                                <div class="numeral-selector selector">
+                                                    <div class="select-box-wrapper">
+                                                        <select name="tipo_id_rif_asegurado" id="select_box">
+                                                            <option value="<%= legalInsured.tipo_rif_asegurado_per_jur %>"><%= legalInsured.tipo_rif_asegurado_per_jur %></option>
+                                                            <option value="V">V</option>
+                                                            <option value="E">E</option>
+                                                            <option value="J">J</option>
+                                                            <option value="G">G</option>
+                                                            <option value="I">I</option>
+                                                            <option value="F">F</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
                                                 <input 
                                                     type="text"
                                                     name="id_rif_asegurado"
                                                     id="id_rif_asegurado"
                                                     onkeyup="pasarAgentePropio();"
                                                     value="<%= legalInsured.rif_asegurado_per_jur %>" 
-                                                    class="form-control cedula_rif"
+                                                    class="form-control input-numeral"
                                                     oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
                                                     required
                                                 >
@@ -89,14 +102,27 @@
                                     <% } else if (legalInsured === undefined) { %>
                                         <% if (resultsNaturalInsured.length > 0) { %>
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Cédula/Rif</label>
-                                                <div class="col-sm-9">
+                                                <div class="col-sm-9 field">
+                                                    <div class="numeral-selector selector">
+                                                        <div class="select-box-wrapper">
+                                                            <select name="tipo_id_rif_asegurado" id="select_box">
+                                                                <option value="<%= naturalInsured.tipo_cedula_asegurado_per_nat %>"><%= naturalInsured.tipo_cedula_asegurado_per_nat %></option>
+                                                                <option value="V">V</option>
+                                                                <option value="E">E</option>
+                                                                <option value="J">J</option>
+                                                                <option value="G">G</option>
+                                                                <option value="I">I</option>
+                                                                <option value="F">F</option>
+                                                            </select>
+                                                        </div>
+                                                    </div>
                                                     <input 
                                                         type="text"
                                                         name="id_rif_asegurado"
                                                         id="id_rif_asegurado"
                                                         onkeyup="pasarAgentePropio();"
                                                         value="<%= idNaturalInsured %>" 
-                                                        class="form-control cedula_rif"
+                                                        class="form-control input-numeral"
                                                         oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
                                                         required
                                                     >
@@ -104,14 +130,27 @@
                                             </div>
                                         <% } else { %>
                                             <div class="form-group row"><label class="col-sm-3 col-form-label">Cédula/Rif</label>
-                                                <div class="col-sm-9">
+                                                <div class="col-sm-9 field">
+                                                    <div class="numeral-selector selector">
+                                                        <div class="select-box-wrapper">
+                                                            <select name="tipo_id_rif_asegurado" id="select_box">
+                                                                <option value="<%= naturalInsured.tipo_cedula_asegurado_per_nat %>"><%= naturalInsured.tipo_cedula_asegurado_per_nat %></option>
+                                                                <option value="V">V</option>
+                                                                <option value="E">E</option>
+                                                                <option value="J">J</option>
+                                                                <option value="G">G</option>
+                                                                <option value="I">I</option>
+                                                                <option value="F">F</option>
+                                                            </select>
+                                                        </div>
+                                                    </div>
                                                     <input 
                                                         type="text"
                                                         name="id_rif_asegurado"
                                                         id="id_rif_asegurado"
                                                         onkeyup="pasarAgentePropio();"
                                                         value="<%= naturalInsured.cedula_asegurado_per_nat %>" 
-                                                        class="form-control cedula_rif"
+                                                        class="form-control input-numeral"
                                                         oninput="let p=this.selectionStart;this.value=this.value.toUpperCase().replace(/\s+/g, '');this.setSelectionRange(p, p);"
                                                         required
                                                     >
@@ -293,7 +332,7 @@
                                                 name="porcentaje_agente_propio"
                                                 id="porcentaje_agente_propio"
                                                 value="<%= ownAgentPercentage %>"
-                                                class="form-control number_format"
+                                                class="form-control porcentaje_tasa"
                                                 required
                                             >
                                         </div>
@@ -344,7 +383,7 @@
                                                 name="monto_comision_recibo"
                                                 id="monto_comision_recibo"
                                                 value="<%= comisionRecibo %>" 
-                                                class="form-control"
+                                                class="form-control porcentaje_tasa"
                                                 required
                                             >
                                         </div>
