--- a/src/views/emergencyForm.ejs
+++ b/src/views/emergencyForm.ejs
@@ -57,7 +57,7 @@
                                         <div class="col-sm-9 field">
                                             <div class="numeral-selector selector">
                                                 <div class="select-box-wrapper">
-                                                    <select id="select_box">
+                                                    <select name="tipo_id_rif_asegurado" id="select_box">
                                                         <option value="V">V</option>
                                                         <option value="E">E</option>
                                                         <option value="J">J</option>
@@ -83,7 +83,7 @@
                                         <div class="col-sm-9 field">
                                             <div class="numeral-selector selector">
                                                 <div class="select-box-wrapper">
-                                                    <select id="select_box">
+                                                    <select name="tipo_cedula_beneficiario" id="select_box2">
                                                         <option value="V">V</option>
                                                         <option value="E">E</option>
                                                     </select>
