--- a/src/views/executives.ejs
+++ b/src/views/executives.ejs
@@ -31,6 +31,7 @@
                         >
                         <thead>
                         <tr>
+                            <th>Tipo Cédula</th>
                             <th>Cédula</th>
                             <th>Nombre</th>
                             <th>Apellido</th>
@@ -48,6 +49,7 @@
                         </tbody>
                         <tfoot>
                         <tr>
+                            <th>Tipo Cédula</th>
                             <th>Cédula</th>
                             <th>Nombre</th>
                             <th>Apellido</th>
@@ -134,6 +136,7 @@ $(document).ready(function(){
         processing: true,
         serverSide: false,
         columns: [
+            {"data": "tipo_cedula_ejecutivo"},
             {"data": "cedula_ejecutivo"},
             {"data": "nombre_ejecutivo"},
             {"data": "apellido_ejecutivo"},
