--- a/src/views/layouts/footer.ejs
+++ b/src/views/layouts/footer.ejs
@@ -105,6 +105,7 @@
 <script>
     new Cleave('.input-numeral-rif', {
         numeral: true,
+        stripLeadingZeroes: false,
         numeralDecimalMark: '.',
         delimiter: ''
     });
@@ -119,34 +120,6 @@
 </script>
 
 <script>
-    $(document).ready(function () {
-        new Cleave('.input-numeral', {
-            numeral: true,
-            numeralDecimalMark: ',',
-            delimiter: '.'
-        });
-
-        $('#select_box').change(function(){
-            if ((this.value === 'V') || (this.value === 'E')) {
-                var cleaveNumeral = new Cleave('.input-numeral', {
-                    numeral: true,
-                    numeralDecimalMark: ',',
-                    delimiter: '.'
-                });
-                cleaveNumeral.setRawValue('');
-            } else {
-                var cleaveNumeral = new Cleave('.input-numeral', {
-                    numeral: true,
-                    numeralDecimalMark: '!',
-                    delimiter: ''
-                });
-                cleaveNumeral.setRawValue('');
-            }
-        });
-    });
-</script>
-
-<script>
     var separador = document.getElementsByClassName('number_format');
     for (var i = 0 ; i < separador.length; i++) {
         separador[i].addEventListener('input', (e) => {
@@ -157,19 +130,6 @@
             e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
         }, false); 
     } 
-</script>
-
-<script>
-    var separador = document.getElementsByClassName('cedula');
-    for (var i = 0 ; i < separador.length; i++) {
-        separador[i].addEventListener('input', (e) => {
-            var entrada = e.target.value.split(','),
-            parteEntera = entrada[0].replace(/\./g, ''),
-            parteDecimal = entrada[1],
-            salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-            e.target.value = salida;
-        }, false); 
-    }
 </script>
 
 <script>
