--- a/src/views/layouts/footerClaim.ejs
+++ b/src/views/layouts/footerClaim.ejs
@@ -75,13 +75,15 @@
     var legalInsureds = <%- JSON.stringify(legalInsureds) %>;
     function pasarNombreAsegurado() {
         var idRif = document.getElementById("id_rif_asegurado").value;
+        var selectBox = document.getElementById("select_box").value;
+        var selectBox2 = document.getElementById("select_box2").value;
         var beneficiaryId = document.getElementById("cedula_beneficiario").value;
-        if (idRif.startsWith('J') || idRif.startsWith('G')) {
+        if ((selectBox === 'J') || (selectBox === 'G') || (selectBox === 'I') || (selectBox === 'F')) {
             for (let i = 0; i < legalInsureds.length; i++) {
                 let elementLegalInsured = legalInsureds[i];
-                if (idRif === elementLegalInsured.rif_asegurado_per_jur) {
+                if ((selectBox === elementLegalInsured.tipo_rif_asegurado_per_jur) && (idRif === elementLegalInsured.rif_asegurado_per_jur)) {
                     document.getElementById("nombre_razon_asegurado").value = elementLegalInsured.razon_social_per_jur;
-                    pasarNombreBeneficiarioPolizaJur(elementLegalInsured.id_asegurado_per_jur, beneficiaryId);
+                    pasarNombreBeneficiarioPolizaJur(elementLegalInsured.id_asegurado_per_jur, beneficiaryId, selectBox2);
                     break;
                 } else {
                     document.getElementById("nombre_razon_asegurado").value = '';
@@ -92,9 +94,9 @@
             for (let i = 0; i < naturalInsureds.length; i++) {
                 let elementNaturalInsured = naturalInsureds[i];
                 if (idRif.match(/^\d/)) {
-                    if (idRif === elementNaturalInsured.cedula_asegurado_per_nat) {
+                    if ((selectBox === elementNaturalInsured.tipo_cedula_asegurado_per_nat) && (idRif === elementNaturalInsured.cedula_asegurado_per_nat)) {
                         document.getElementById("nombre_razon_asegurado").value = elementNaturalInsured.nombre_asegurado_per_nat + ' ' + elementNaturalInsured.apellido_asegurado_per_nat;
-                        pasarNombreBeneficiarioPolizaNat(elementNaturalInsured.id_asegurado_per_nat, beneficiaryId);
+                        pasarNombreBeneficiarioPolizaNat(elementNaturalInsured.id_asegurado_per_nat, beneficiaryId, selectBox2);
                         break;
                     } else {
                         document.getElementById("nombre_razon_asegurado").value = '';
@@ -117,7 +119,7 @@
     var ciib = <%- JSON.stringify(resultsCIIB) %>;
     var collectives = <%- JSON.stringify(collectives) %>;
     var beneficiaries = <%- JSON.stringify(beneficiaries) %>;
-    function pasarNombreBeneficiarioPolizaNat(idInsured, beneficiaryId) {
+    function pasarNombreBeneficiarioPolizaNat(idInsured, beneficiaryId, selectBox2) {
         for (const itemPII of pii) {
             if (itemPII.asegurado_per_nat_id === idInsured) {
                 for (const itemPolicy of policies) {
@@ -128,7 +130,7 @@
                                     for (const itemBeneficiary of beneficiaries) {
                                         if (itemPIIB.beneficiario_id === itemBeneficiary.id_beneficiario) {
                                             if (beneficiaryId.match(/^\d/)) {
-                                                if (itemBeneficiary.cedula_beneficiario === beneficiaryId) {
+                                                if ((itemBeneficiary.tipo_cedula_beneficiario === selectBox2) && (itemBeneficiary.cedula_beneficiario === beneficiaryId)) {
                                                     var beneficiaryName = itemBeneficiary.nombre_beneficiario + ' ' + itemBeneficiary.apellido_beneficiario;
                                                     document.getElementById("nombre_beneficiario").value = beneficiaryName;
                                                 }
@@ -154,7 +156,7 @@
                                     for (const itemBeneficiary of beneficiaries) {
                                         if (itemCIIB.beneficiario_id === itemBeneficiary.id_beneficiario) {
                                             if (beneficiaryId.match(/^\d/)) {
-                                                if (itemBeneficiary.cedula_beneficiario === beneficiaryId) {
+                                                if ((itemBeneficiary.tipo_cedula_beneficiario === selectBox2) && (itemBeneficiary.cedula_beneficiario === beneficiaryId)) {
                                                     var beneficiaryName = itemBeneficiary.nombre_beneficiario + ' ' + itemBeneficiary.apellido_beneficiario;
                                                     document.getElementById("nombre_beneficiario").value = beneficiaryName;
                                                 }
@@ -178,7 +180,7 @@
     var piib = <%- JSON.stringify(resultsPIIB) %>;
     var policies = <%- JSON.stringify(policies) %>;
     var beneficiaries = <%- JSON.stringify(beneficiaries) %>;
-    function pasarNombreBeneficiarioPolizaJur(idInsured, beneficiaryId) {
+    function pasarNombreBeneficiarioPolizaJur(idInsured, beneficiaryId, selectBox2) {
         for (const itemPII of pii) {
             if (itemPII.asegurado_per_jur_id === idInsured) {
                 for (const itemPolicy of policies) {
@@ -189,7 +191,7 @@
                                     for (const itemBeneficiary of beneficiaries) {
                                         if (itemPIIB.beneficiario_id === itemBeneficiary.id_beneficiario) {
                                             if (beneficiaryId.match(/^\d/)) {
-                                                if (itemBeneficiary.cedula_beneficiario === beneficiaryId) {
+                                                if ((itemBeneficiary.tipo_cedula_beneficiario === selectBox2) && (itemBeneficiary.cedula_beneficiario === beneficiaryId)) {
                                                     var beneficiaryName = itemBeneficiary.nombre_beneficiario + ' ' + itemBeneficiary.apellido_beneficiario;
                                                     document.getElementById("nombre_beneficiario").value = beneficiaryName;
                                                 }
@@ -220,19 +222,6 @@
 </script>
 
 <script>
-    var separador = document.getElementsByClassName('number_format');
-    for (var i = 0 ; i < separador.length; i++) {
-        separador[i].addEventListener('input', (e) => {
-            var entrada = e.target.value.split(','),
-            parteEntera = entrada[0].replace(/\./g, ''),
-            parteDecimal = entrada[1],
-            salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-            e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
-        }, false); 
-    }
-</script>
-
-<script>
     new Cleave('.input-numeral-cedula', {
         numeral: true,
         numeralDecimalMark: ',',
@@ -242,47 +231,42 @@
 
 <script>
     $(document).ready(function () {
-        new Cleave('.input-numeral', {
-            numeral: true,
-            numeralDecimalMark: ',',
-            delimiter: '.'
-        });
+        if ((document.getElementById("select_box").value === 'V') || (document.getElementById("select_box").value === 'E')) {
+            var cleaveNumeral = new Cleave('.input-numeral', {
+                numeral: true,
+                numeralDecimalMark: ',',
+                delimiter: '.',
+                stripLeadingZeroes: false
+            });
+        } else {
+            var cleaveNumeral = new Cleave('.input-numeral', {
+                numeral: true,
+                numeralDecimalMark: '!',
+                delimiter: '',
+                stripLeadingZeroes: false
+            });
+        }
 
         $('#select_box').change(function(){
             if ((this.value === 'V') || (this.value === 'E')) {
                 var cleaveNumeral = new Cleave('.input-numeral', {
                     numeral: true,
                     numeralDecimalMark: ',',
-                    delimiter: '.'
+                    delimiter: '.',
+                    stripLeadingZeroes: false
                 });
                 cleaveNumeral.setRawValue('');
             } else {
                 var cleaveNumeral = new Cleave('.input-numeral', {
                     numeral: true,
                     numeralDecimalMark: '!',
-                    delimiter: ''
+                    delimiter: '',
+                    stripLeadingZeroes: false
                 });
                 cleaveNumeral.setRawValue('');
             }
         });
     });
-</script>
-
-<script>
-    var separador = document.getElementsByClassName('cedula_rif');
-    for (var i = 0 ; i < separador.length; i++) {
-        separador[i].addEventListener('input', (e) => {
-            var entrada = e.target.value.split(',');
-            var parteEntera = entrada[0].replace(/\./g, '');
-            var salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-            if ((salida.charAt(0) === 'J') || (salida.charAt(0) === 'G') || (salida.charAt(0) === 'V')) {
-                var parteRif = entrada[0];
-                e.target.value = parteRif;
-            } else {
-                e.target.value = salida;
-            }
-        }, false); 
-    }
 </script>
 
 <script>
