--- a/src/views/legalInsuredForm.ejs
+++ b/src/views/legalInsuredForm.ejs
@@ -31,7 +31,7 @@
                                         <div class="col-sm-9 field">
                                             <div class="numeral-selector selector">
                                                 <div class="select-box-wrapper">
-                                                    <select id="select_box">
+                                                    <select name="tipo_rif_asegurado_per_jur" id="select_box">
                                                         <option value="J">J</option>
                                                         <option value="G">G</option>
                                                         <option value="I">I</option>
