--- a/src/views/receiptForm.ejs
+++ b/src/views/receiptForm.ejs
@@ -59,7 +59,7 @@
                                         <div class="col-sm-9 field">
                                             <div class="numeral-selector selector">
                                                 <div class="select-box-wrapper">
-                                                    <select id="select_box">
+                                                    <select name="tipo_id_rif_asegurado" id="select_box">
                                                         <option value="V">V</option>
                                                         <option value="E">E</option>
                                                         <option value="J">J</option>
@@ -199,7 +199,7 @@
                                                 name="porcentaje_agente_propio"
                                                 id="porcentaje_agente_propio"
                                                 placeholder="Porcentaje Agente Propio *"
-                                                class="form-control number_format"
+                                                class="form-control porcentaje_tasa"
                                                 required
                                             >
                                         </div>
@@ -251,7 +251,7 @@
                                                 name="monto_comision_recibo"
                                                 id="monto_comision_recibo"
                                                 placeholder="Comisión Asociada *" 
-                                                class="form-control"
+                                                class="form-control porcentaje_tasa"
                                                 required
                                             >
                                         </div>
